# Rust-Game

./: .gitignore  README.md
rust_game/: Cargo.toml
rust_game/res/: fat_cat_obj.mtl
rust_game/src/: main.rs
rust_game/src/lib/: camera.rs  compute.wgsl  instance.rs  mod.rs  model.rs  resources.rs  run.rs  texture.rs
rust_game/src/lib/options/: mod.rs
rust_game/src/lib/pipelines/: compute.wgsl  gen_terrain.wgsl  load_chunks.rs  mod.rs  ray_intersect.wgsl  ray_intersection.rs
rust_game/src/lib/utils/: mod.rs
rust_game/src/light/: mod.rs
rust_game/src/world/: mod.rs  terrain.wgsl
